--- a/Python/+Exemplos/Pandas/Pandas.ipynb
+++ b/Python/+Exemplos/Pandas/Pandas.ipynb
@@ -1823,11 +1823,10 @@
       "source": [
         "def calcular_idade(data_nascimento):\n",
         "    data_nascimento = pd.to_datetime(data_nascimento)\n",
-        "    hoje = datetime.now()  # Usa datetime.now() para obter a data atual\n",
+        "    hoje = datetime.now()  \n",
         "    idade = hoje.year - data_nascimento.year - ((hoje.month, hoje.day) < (data_nascimento.month, data_nascimento.day))\n",
         "    return idade\n",
         "\n",
-        "# Adicionar a coluna 'Idade'\n",
         "df_concurso['Idade'] = df_concurso['Data de Nascimento'].apply(calcular_idade)\n",
         "\n",
         "media_idade_por_estado = df_concurso.groupby('Estado')['Idade'].mean()\n",
@@ -1858,7 +1857,7 @@
       ],
       "source": [
         "total_pessoas = len(df_concurso)\n",
-        "pessoas_com_deficiencia = df_concurso['Deficiência'].notna().sum()  # Conta o número de não-nulos\n",
+        "pessoas_com_deficiencia = df_concurso['Deficiência'].notna().sum() \n",
         "percentual_deficiencia = (pessoas_com_deficiencia / total_pessoas) * 100\n",
         "print(f\"Porcentagem de pessoas com deficiência: {percentual_deficiencia:.2f}%\")"
       ]
@@ -2185,20 +2184,6 @@
       "source": [
         "df_concurso.isna().sum().plot(kind='bar')"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### 15"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
