--- a/Python/+Exemplos/Pipeline/Pipeline.ipynb
+++ b/Python/+Exemplos/Pipeline/Pipeline.ipynb
@@ -6,7 +6,17 @@
       "metadata": {
         "id": "1qjOSZhBFu3z"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mFailed to start the Kernel. \n",
+            "\u001b[1;31mThe kernel died. Error: ... View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "import requests\n",
         "import numpy as np\n",
@@ -875,7 +885,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.12.6"
     }
   },
   "nbformat": 4,
