--- a/Python/+Exemplos/Pipeline/Pipeline.ipynb
+++ b/Python/+Exemplos/Pipeline/Pipeline.ipynb
@@ -789,6 +789,7 @@
       "source": [
         "def coletar_dados(url):\n",
         "  logging.info('Pegou URL para a criação das diferentes URLs criando uma para cada página')\n",
+        "  url = \n",
         "  list_urls = [url + str(i) for i in range(1, 6)]\n",
         "  arr_urls = np.asarray(list_urls)\n",
         "\n",
@@ -811,15 +812,12 @@
       "source": [
         "def transformar_dado(dado):\n",
         "  logging.info('Criando dataframe')\n",
-        "  # Insira o código para a criação do dataframe a partir do parâmetro 'dado'\n",
-        "  # A variável deve ter o nome df_area\n",
+        "  df= pd.DataFrame(dado)\n",
         "\n",
-        "\n",
-        "  # Insita o log sobre o que está sendo executado, utilizando 'logging.info'\n",
-        "\n",
+        "  logging.info('Selecionando colunas')\n",
         "  df_area = df[['funcao', 'valorEmpenhado']]\n",
         "\n",
-        "  # Insita o log sobre o que está sendo executado, utilizando 'logging.info'\n",
+        "  logging.info('Transformando dado string -> float')\n",
         "  df_area['valorEmpenhado'] = df_area['valorEmpenhado'].str.replace('.', '').str.replace(',', '.').astype(np.float64)\n",
         "\n",
         "  logging.info('Transformando dado string -> float')\n",
@@ -827,8 +825,7 @@
         "\n",
         "  logging.info('Transformando dados para retirar proporção em porcentagem')\n",
         "  agg_area = agg_area['valorEmpenhado']/df_area['valorEmpenhado'].sum()\n",
-        "\n",
-        "  # Insira o código para reset de index de agg_area, usando reset_index()\n",
+        "  agg_area = agg_area.reset_index()\n",
         "\n",
         "  return agg_area"
       ]
@@ -842,8 +839,7 @@
       "outputs": [],
       "source": [
         "def carga(dado):\n",
-        "  # crie um arquivo CSV com p parâmetro 'dado', o nome do arquivo deve ser 'distribuicao_empenho_area_20220.csv'\n",
-        "  # esse método não tem retorno\n"
+        "  dado.to_csv('distribuicao_empenho_area_20220.csv')\n"
       ]
     },
     {
@@ -854,14 +850,12 @@
       },
       "outputs": [],
       "source": [
-        "# Escreva aqui quais são os passos para a extração dos dados e processamento\n",
-        "# Este método não tem retorno, no final será gerado um CSV com os dados a serem salvos\n",
-        "\n",
         "def etl():\n",
         "  url = 'https://api.portaldatransparencia.gov.br/api-de-dados/emendas?ano=2022&pagina='\n",
-        "  # colete os dados\n",
-        "  # transforme os dados\n",
-        "  # salve os dados\n"
+        "  dado = coletar_dados()\n",
+        "  dado = transformar_dado()\n",
+        "  carga(dado)\n",
+        "  logging.info('ETL finalizada')\n"
       ]
     },
     {
@@ -886,7 +880,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.12.6"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
