--- a/Python/+Exemplos/Data Wrangling/[Notebook]_Python_para_Dados_Data_Wrangling.ipynb
+++ b/Python/+Exemplos/Data Wrangling/[Notebook]_Python_para_Dados_Data_Wrangling.ipynb
@@ -4236,7 +4236,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df_inf['Idoso'] = np.where(df_inf.Idade>=60,True,False)\n"
+        "df_inf['Idoso'] = np.where(df_inf.Idade>=60,True,False)"
       ]
     },
     {
